--- a/bitrix/templates/main/1-0projects-inner.html
+++ b/bitrix/templates/main/1-0projects-inner.html
@@ -100,40 +100,40 @@
 					<div class="galery__nav"></div>
 					<div class="project__gallery">
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
 						</div>
 					</div>
 					<div class="galery__description-wrapper">
@@ -180,7 +180,7 @@
 				<section class="section kredo">
 					<div class="container container__kredo">
 						<div class="task__kredo">
-							<div class="task__kredo-photo"><img data-speed="20" data-direction="1" src="/img/projects/kredo.jpg" alt="" class="parallax"></div>
+							<div class="task__kredo-photo"><img data-speed="20" data-direction="1" src="img/projects/kredo.jpg" alt="" class="parallax"></div>
 							<div data-speed="15" data-direction="1" class="task__kredo-text parallax">We make a good<br>job and love our<br>work so much</div>
 						</div>
 					</div>
@@ -197,7 +197,7 @@
 						<div class="product_selector-item">
 							<div class="product__head">Some facts</div>
 						</div>
-						<div class="product_selector-item">
+						<div data-speed="10" data-direction="1" class="product_selector-item parallax">
 							<div class="product_selector-title">
 								<div class="heading">
 									<div class="heading-text"><span>01</span></div>
@@ -210,7 +210,7 @@
 						<div data-speed="10" data-direction="1" class="product_selector-photo photo_left parallax"><img data-speed="10" data-direction="1" src="/img/projects/half.jpg" alt="" class="parallax">
 							<p data-speed="5" data-direction="1" class="text parallax">Two days before the release, Uli Sigg and director<br>Michael Schindhelm attended a screening<br>in Bern</p>
 						</div>
-						<div class="product_selector-item fact_2">
+						<div data-speed="10" data-direction="1" class="product_selector-item fact_2 parallax">
 							<div class="product_selector-title">
 								<div class="heading">
 									<div class="heading-text"><span>02</span></div>
