--- a/src/jade/1-0projects-inner.jade
+++ b/src/jade/1-0projects-inner.jade
@@ -51,45 +51,45 @@ head
           .project__gallery
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
 
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
 
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
 
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
 
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
 
             .project__galery-item
               .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
+                img(src="img/projects/galery1.jpg", alt="")
           .galery__description-wrapper
             .galery__description
               .item__description
@@ -146,7 +146,7 @@ head
           .container.container__kredo
             .task__kredo
               .task__kredo-photo
-                img.parallax(data-speed='20',data-direction='1',src="/img/projects/kredo.jpg", alt="")
+                img.parallax(data-speed='20',data-direction='1',src="img/projects/kredo.jpg", alt="")
               .task__kredo-text.parallax(data-speed='15',data-direction='1') We make a good
                 br
                 | job and love our
@@ -161,7 +161,7 @@ head
           .product_selector
             .product_selector-item
               .product__head Some facts
-            .product_selector-item
+            .product_selector-item.parallax(data-speed='10',data-direction='1')
               .product_selector-title
                 .heading
                   .heading-text
@@ -184,7 +184,7 @@ head
                 | Michael Schindhelm attended a screening
                 br
                 | in Bern
-            .product_selector-item.fact_2
+            .product_selector-item.fact_2.parallax(data-speed='10',data-direction='1')
               .product_selector-title
                 .heading
                   .heading-text
